<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- The name of the app -->
    <string name="app_name">Galaxy Zoo</string>

    <!-- The description of the app. This text is split into separate strings
    to make life easier for translators. -->

    <string name="about_text1">An android app for classifying <a href="http://www.galaxyzoo.org/">Galaxy Zoo</a> subjects. This is an official Zooniverse and Galaxy Zoo app.</string>
    <string name="about_text2">This android app was developed by <a href="http://murrayc.com/">Murray Cumming</a>.</string>

    <string name="about_text3">This app uses the <a href="https://square.github.io/retrofit/">Retrofit</a> library, under the Apache License version 2.0.</string>

    <string name="about_text3b">This app uses the <a href="http://square.github.io/picasso/">Picasso</a> library, under the Apache License version 2.0.</string>

    <string name="about_text4">The answer icons and example images are from the Zooniverse\'s <a href="https://github.com/zooniverse/Galaxy-Zoo">web UI for Galaxy-Zoo</a>, under the Apache License version 2.0.</string>

    <string name="about_text5">Subject images from the <a href="http://www.sdss3.org/">Sloan Digital Sky Survey</a> are used under their <a href="http://www.sdss3.org/collaboration/imageuse.php">non-commercial license</a>.</string>

    <string name="about_text6">Subject images from the <a href="http://hubblesite.org/">Hubble Space Telescope</a> are from NASA and STScI and used under their <a href="http://hubblesite.org/about_us/copyright.php">public domain license</a>.</string>

    <!-- This shows the version number of the app. -->
    <string name="about_version_text_format">Version: %s</string>

    <!-- This is shown while the app is first starting. -->
    <string name="progress_loading_text">Loading…</string>

    <!-- An action. Shown on a button or menu item. -->
    <string name="action_invert">Invert</string>

    <!-- An action. Shown on a button or menu item. -->
    <string name="action_download_image">Download Image</string>

    <!-- An action. Shown on a button or menu item. -->
    <string name="action_examples">Examples</string>

    <!-- An action. Shown on a button or menu item. -->
    <string name="action_login">Login</string>

    <!-- An action. Shown on a button or menu item. -->
    <string name="action_logout">Log out</string>

    <!-- A checkable action with two states. It is either a favorite or not. Shown on a button or menu item. -->
    <string name="action_favorite">Favorite</string>

    <!-- An action. Shown on a button or menu item. -->
    <string name="action_restart">Restart</string>

    <!-- An action. Shown on a button or menu item. -->
    <string name="action_discuss">Discuss</string>

    <!-- An action. Shown on a button or menu item. -->
    <string name="action_share">Share</string>

    <!-- An action. Shown on a button or menu item. -->
    <string name="action_list">List</string>

    <!-- An action. Shown on a button or menu item. -->
    <string name="action_next">Classify</string>

    <!-- Shown on a menu item (and in the system's accounts list) to open the application's settings (preferences). -->
    <string name="action_settings">Settings</string>

    <!-- Shown in the system's accounts list to describe the application's settings (preferences).. -->
    <string name="description_settings">How many to download in advance, etc.</string>

    <!-- Shown on a menu item to view the application's description. -->
    <string name="action_about">About</string>

    <!-- The accessibility description of an image -->
    <string name="description_thumbnail">Thumbnail</string>

    <!-- The accessibility description of an image -->
    <string name="description_standard_image">Standard Image</string>

    <!-- The title of a set of example images. -->
    <string name="title_examples">Examples</string>

    <!-- The title of a screen that shows an example image. -->
    <string name="title_activity_example_viewer">Example</string>

    <!-- The title of a screen that shows an image. -->
    <string name="title_activity_subject_viewer">Subject</string>

    <!-- The text for a button that lets the user reset a password. -->
    <string name="forgot_password_button_text">Forgot password?</string>

    <!-- The text for a button that lets the user register to get a username and password. -->
    <string name="register_button_text">Register</string>

    <!-- The accessibility description of an image -->
    <string name="content_description_example_image">Example image.</string>

    <string name="title_zooniverse_id">Zooniverse ID:</string>

    <!-- The accessibility description of a contextual icon. -->
    <string name="content_description_favorite">Whether the subject is a favorite.</string>

    <!-- The accessibility description of a contextual icon. -->
    <string name="content_description_classified">Whether the subject has been classified.</string>

    <!-- The accessibility description of a contextual icon. -->
    <string name="content_description_uploaded">Whether the subject has been uploaded.</string>

    <!-- The title of a button that lets the user look at an image in more detail. -->
    <string name="button_title_examine">Examine</string>

    <!-- The title of a button that takes the user to a discussion forum for the image. -->
    <string name="button_title_discuss">Discuss</string>

    <!-- The title of a screen that explains how to use the app. -->
    <string name="title_activity_question_help">Help</string>

    <!-- The title of a screen that lets the user log in to the system. -->
    <string name="title_activity_login">Sign in</string>

    <!-- Some text to encourage the user to login. -->
    <string name="login_hint">Login or create an account to receive credit for your work.</string>

    <!-- The description of the username field when logging in.. -->
    <string name="prompt_username">Username</string>

    <!-- The description of the password field when logging in.. -->
    <string name="prompt_password">Password</string>

    <!-- The title of the login button. -->
    <string name="action_sign_in">Sign in</string>

    <!-- The title of the login button that will appear on the on-screen keyboard. -->
    <string name="action_sign_in_short">Sign in</string>

    <!-- An error message. -->
    <string name="error_invalid_password">This password is too short.</string>

    <!-- An error message. -->
    <string name="error_incorrect_password">This password is incorrect.</string>

    <!-- An error message. -->
    <string name="error_field_required">This field is required.</string>

    <!-- An error message. We show this when we cannot continue because there is no network connection. -->
    <string name="error_no_network">No network connection.</string>

    <!-- An error message. We show this when we cannot continue because there is no wi-fi network connection. -->
    <string name="error_no_wifi_network">No Wi-Fi network connection.</string>

    <!-- TODO: Make this clearer for people who don't know what an (Internet) server is? -->
    <!-- An error message. We show this when we cannot continue because something is wrong with the network connection. -->
    <string name="error_could_not_connect">Cannot connect to the server.</string>

    <!-- An error message. We show this when we cannot continue because something is wrong with the network connection. -->
    <string name="error_no_subjects">Cannot download new subjects to classify.</string>

    <!-- We offer this button when showing the alert dialog about a network connection problem. -->
    <string name="error_button_retry">Retry</string>

    <!-- We offer this button when showing the alert dialog about a network connection problem. -->
    <string name="error_button_cancel">Cancel</string>

    <!-- An error message. We show this when we cannot save the username and password in Android Smart Lock,
         for some unknown reason. -->
    <string name="error_save_credentials_failed">Failed to save credentials.</string>

    <!-- An informative message. This lets the user know that they are already logged in to the system. -->
    <string name="message_logged_in">Logged In.</string>

    <!-- An informative message. This lets the user know that we saved the username and password in Android Smart Lock,. -->
    <string name="message_saved_credentials">Credentials Saved.</string>


    <!-- The title of the Settings screen to show or change the app preferences. -->
    <string name="title_activity_settings">Settings</string>

    <!-- The title of the preference that controls how many items are downloaded before they are needed. -->
    <string name="pref_title_cache_size">Download in advance</string>
    <string name="pref_default_cache_size" translatable="false">10</string>

    <!-- The title of the preference that controls how many old items should stay on the device. -->
    <string name="pref_title_keep_count">Keep</string>
    <string name="pref_default_keep_count" translatable="false">50</string>
    <string name="pref_default_show_discuss_question" translatable="false">true</string>
    <string name="pref_default_wifi_only" translatable="false">false</string>

    <string name="pref_title_wifi_only">Download via Wi-Fi only</string>
    <string name="pref_description_wifi_only">To reduce carrier data charges, don\'t download over mobile networks.</string>

    <string name="pref_title_show_discuss_question">Offer Discussion</string>
    <string name="pref_description_show_discuss_question">Whether to show the “Would you like to discuss this object?” question.</string>

    //The android:transitionName used for the ImageView that shows the subject.
    //Activities can use the same transitionName on small versions of the image,
    //when specifying a transition when starting an activity that contains this SubjectFragment.
    <string name="transition_subject_image" translatable="false">transition_subject_image</string>

    <!-- The possible numbers of items that may be downloaded in advance before they are needed. -->
    <string-array name="pref_cache_size_entries">
        <item>5 subjects</item>
        <item>10 subjects</item>
        <item>20 subjects</item>
        <item>50 subjects</item>
        <item>200 subjects</item>
    </string-array>

    <string-array name="pref_cache_size_values" translatable="false">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>200</item>
    </string-array>

    <!-- The possible numbers of old items that may be kept on the device. -->
    <string-array name="pref_keep_count_entries">
        <item>5 classified subjects</item>
        <item>10 classified subjects</item>
        <item>20 classified subjects</item>
        <item>50 classified subjects</item>
    </string-array>

    <string-array name="pref_keep_count_values" translatable="false">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>50</item>
    </string-array>

</resources>
