<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="@string/pref_key_cache_size"
        android:title="@string/pref_title_cache_size"
        android:dialogTitle="@string/pref_title_cache_size"
        android:defaultValue="@string/pref_default_cache_size"
        android:entries="@array/pref_cache_size_entries"
        android:entryValues="@array/pref_cache_size_values" />

    <ListPreference
        android:key="@string/pref_key_keep_count"
        android:title="@string/pref_title_keep_count"
        android:dialogTitle="@string/pref_title_keep_count"
        android:defaultValue="@string/pref_default_keep_count"
        android:entries="@array/pref_keep_count_entries"
        android:entryValues="@array/pref_keep_count_values" />

    <CheckBoxPreference
        android:key="@string/pref_key_show_discuss_question"
        android:title="@string/pref_title_show_discuss_question"
        android:defaultValue="@string/pref_default_show_discuss_question"
        android:summary="@string/pref_description_show_discuss_question" />

    <CheckBoxPreference
        android:key="@string/pref_key_wifi_only"
        android:title="@string/pref_title_wifi_only"
        android:defaultValue="@string/pref_default_wifi_only"
        android:summary="@string/pref_description_wifi_only"/>

</PreferenceScreen>
