<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/option_menu_item_login"
        android:title="@string/action_login" />
    <item
        android:id="@+id/option_menu_item_logout"
        android:title="@string/action_logout" />
    <!-- The More action is only useful for debugging:
    <item
        android:id="@+id/option_menu_item_more"
        android:showAsAction="ifRoom"
        android:title="@string/action_more" />
    -->
    <item
        android:id="@+id/option_menu_item_next"
        app:showAsAction="ifRoom"
        android:title="@string/action_next" />
    <item
        android:id="@+id/option_menu_item_settings"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/option_menu_item_about"
        android:title="@string/action_about" />
</menu>