<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/option_menu_item_invert"
        app:showAsAction="ifRoom"
        android:title="@string/action_invert"
        android:icon="@drawable/ic_action_invert"
        android:orderInCategory="2" />

    <item
        android:id="@+id/option_menu_item_download_image"
        android:title="@string/action_download_image"
        android:orderInCategory="3" />

    <item
        android:id="@+id/option_menu_item_share"
        android:title="@string/action_share"
        android:orderInCategory="4"
        app:actionProviderClass=
            "android.support.v7.widget.ShareActionProvider" />
</menu>