<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/option_menu_item_favorite"
        android:icon="@drawable/ic_action_favorite"
        android:title="@string/action_favorite"
        android:checkable="true"
        android:orderInCategory="1" />
    <item
        android:id="@+id/option_menu_item_examples"
        android:icon="@drawable/ic_action_help"
        app:showAsAction="ifRoom"
        android:title="@string/action_examples"
        android:orderInCategory="4" />
    <item
        android:id="@+id/option_menu_item_restart"
        android:icon="@drawable/ic_action_undo"
        app:showAsAction="ifRoom"
        android:title="@string/action_restart"
        android:orderInCategory="5" />
</menu>