<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description_thumbnail" />

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/item_image"
        android:layout_alignEnd="@id/item_image"
        android:layout_alignParentBottom="true"
        android:background="#14ffffff"
        android:paddingTop="@dimen/standard_margin"
        android:paddingBottom="@dimen/standard_margin">

        <ImageView
            android:id="@+id/item_checkboxClassified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/standard_large_margin"
            android:clickable="false"
            android:contentDescription="@string/content_description_classified"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@drawable/ic_small_accept"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_gravity="bottom|right" />


        <ImageView
            android:id="@+id/item_checkboxUploaded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/standard_large_margin"
            android:clickable="false"
            android:contentDescription="@string/content_description_uploaded"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@drawable/ic_small_upload"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_gravity="bottom|right" />

        <ImageView
            android:id="@+id/item_checkboxFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:contentDescription="@string/content_description_favorite"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@drawable/ic_small_favorite"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_gravity="bottom"
            android:layout_marginRight="@dimen/standard_large_margin" />
    </LinearLayout>

</RelativeLayout>